Add some logs